@@ -2,6 +2,7 @@
 
 	* Add CMake build open 'BUILD_EXAMPLES' that allows to build the
 	  library only.
+	* Add SerialFile::readLine() method.
 
 2011-03-06  Bernhard Walle <bernhard@bwalle.de>
 
